--- a/index.html
+++ b/index.html
@@ -87,22 +87,22 @@
         
         <hr>
         <div class="cards">
-            <div>
-                <img src="./images/room1.webp" alt="" height="300px" width="450px">
+            <div style="width: 30%; margin: 0 10px;">
+                <img src="./images/room1.webp" alt="" height="250px" width="370px">
                 <br><br>
                 <h3>Classic King</h3>
                 <div class="desc">This 35 sqm room offers city views, a king bed, bathtub, work desk, minibar and free WiFi.</div>
                 <div style="margin-top: 25px;"><a href="" class="butt2">Check Availability</a></div>
             </div>
-               <div>
-                <img src="./images/room2.webp" alt="" height="300px" width="450px">
+               <div style="width: 30%; margin: 0 10px;">
+                <img src="./images/room2.webp" alt="" height="250px" width="370px">
                 <br><br>
                 <h3>Classic Twin</h3>
                 <div class="desc">This 35 sqm room offers city views, twin beds, a bathtub, work desk, minibar and free WiFi.</div>
                 <div style="margin-top: 25px;"><a href="" class="butt2">Check Availability</a></div>
             </div>
-               <div>
-                <img src="./images/room3.webp" alt="" height="300px" width="450px">
+               <div style="width: 30%;">
+                <img src="./images/room3.webp" alt="" height="250px" width="370px">
                 <br><br>
                 <h3>Superior Queen</h3>
                 <div class="desc">This 47 sqm room offers pool views, a large living area, queen bed, free breakfast and WiFi.</div>
