--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ Contact email: hotel.karachi@movenpick.com</p>
       <div style="width: 60%;">
       <div class="revcont">
             <div>
-              <h3>Zubair M</h2>
+              <h3>Sir Adil</h2>
                 <p style="display: inline;">3.0</p> <img src="./images/review1.png" alt="" width="50px" height="10px">
                 <br>
                <p>24/05/2025 From</p>
@@ -304,7 +304,7 @@ Contact email: hotel.karachi@movenpick.com</p>
           </div>
           <div class="revcont">
             <div>
-              <h3>Zubair M</h2>
+              <h3>SMIT</h2>
                 <p style="display: inline;">3.0</p> <img src="./images/review1.png" alt="" width="50px" height="10px">
                 <br>
                <p>24/05/2025 From</p>
@@ -320,7 +320,7 @@ Contact email: hotel.karachi@movenpick.com</p>
           </div>
           <div class="revcont">
             <div>
-              <h3>Zubair M</h2>
+              <h3>Talha(Me)</h2>
                 <p style="display: inline;">3.0</p> <img src="./images/review1.png" alt="" width="50px" height="10px">
                 <br>
                <p>24/05/2025 From</p>
