--- a/index.html
+++ b/index.html
@@ -428,9 +428,174 @@ Pakistan
 
 
 <div class="footer">
-  <div class="footer1"></div>
-  <div class="footer2"></div>
-  <div class="socials"></div>
+  <div class="footer1">
+    <div style="padding-left: 30px; word-spacing: 10px; height: 4rem; padding-top: 20px; font-size: small;">
+      <span class="foot_loc">English</span>
+      >
+      <span class="foot_loc">Asia</span>
+      >
+      <span class="foot_loc">Pakistan</span>
+      >
+      <span class="foot_loc">Karachi</span>
+      >
+      <span>Mövenpick Karachi</span>
+    </div>
+<hr>
+
+
+<div style="height: 300px; width: auto; margin: auto; text-align: center; padding-top: 90px;">
+  <img src="./images/movenpick-logo-footer.svg" alt="">
+</div>
+<hr>
+  </div>
+  <div class="footer2">
+    <div class="f2p1">
+      <h3>Get the scoop</h3>
+    <p>Sign up to our newsletter for juicy offers and sweet new openings</p>
+    <a href="" class="button">Subscribe</a>
+  </div>
+    <hr style="width: 1px; height: 200px; background-color: black; ">
+    <div class="f2p2">
+      <h4>Need Help</h4>
+      <br>
+      <p>Manage Bookings</p>
+      <p>Contact us</p>
+
+
+    </div>
+  </div>
+  <hr>
+  <div class="footer3">
+    <div>
+      <h3>Visit</h3>
+      <br>
+      <p>Find a hotel</p>
+      <p>Find a meeting room</p>
+      <p>Find a special offer</p>
+      <p>Find a resturant</p> 
+    </div>
+    <div>
+      <h3>Destinations</h3>
+      <br>
+      <p>Asia</p>
+      <p>Africa</p>
+      <p>Europe</p>
+      <p>Middle East</p>
+      <p>Pacific</p>
+    </div>
+    <div>
+      <h3>About</h3>
+      <br>
+      <p>Discover Mövenpick</p>
+      <p>Loyalty</p>
+      <p>Central reservations</p>
+      <p>Best Rate Guarantee</p>
+      
+    </div>
+    <div>
+      <h3>Professional</h3>
+      <br>
+      <p>Development</p>
+      <p>Press Room</p>
+      <p>Careers</p>
+      <p>Travel Professionals</p>
+    </div>
+  </div>
+
+
+  <div style="display: flex; padding-left: 50px; align-items: center;">
+    <div style="width: 40%;"><hr></div>
+    <div><img src="./images/ALL.svg" alt=""></div>
+    <div style="width: 40%;"><hr></div>
+  </div>
+
+ <div class="categories">
+  <div class="catcont">
+    <div ><p>Luxury</p></div>
+    <div class="spons">
+      <img src="./images/sponcers/raf.svg" alt="">
+      <img src="./images/sponcers/oex.svg" alt="">
+      <img src="./images/sponcers/fae.svg" alt="">
+      <img src="./images/sponcers/ban.svg" alt="">
+      <img src="./images/sponcers/del.svg" alt="">
+      <img src="./images/sponcers/sol.svg" alt="">
+      <img src="./images/sponcers/fai.svg" alt="">
+      <img src="./images/sponcers/emb.svg" alt="">
+      <img src="./images/sponcers/sls.svg" alt="">
+      <br>
+      <img src="./images/sponcers/sos2.svg" alt="">
+      <img src="./images/sponcers/sof2.svg" alt="">
+      <img src="./images/sponcers/The_house2.svg" alt="">
+      <img src="./images/sponcers/rix2.svg" alt="">
+      <img src="./images/sponcers/ofs2.svg" alt="">
+    </div>
+  </div>
+  <div class="catcont">
+    <div ><p>Premium</p></div>
+    <div class="spons">
+      <img src="./images/sponcers/mtsp1.svg" alt="">
+      <img src="./images/sponcers/mgap2.svg" alt="">
+      <img src="./images/sponcers/p3.svg" alt="">
+      <img src="./images/sponcers/p4.svg" alt="">
+      <img src="./images/sponcers/p5svg" alt="">
+      <img src="./images/sponcers/p6.svg" alt="">
+      <img src="./images/sponcers/p7.svg" alt="">
+      <img src="./images/sponcers/p8.svg" alt="">
+      <img src="./images/sponcers/p9.svg" alt="">
+      <br>
+      <img src="./images/sponcers/p10.svg" alt="">
+      <img src="./images/sponcers/p11.svg" alt="">
+      <img src="./images/sponcers/p12.svg" alt="">
+      <img src="./images/sponcers/p13.svg" alt="">
+  </div>
+  </div>
+  <div class="catcont">
+    <div ><p>MidScale</p></div>
+    <div class="spons">
+      <img src="./images/sponcers/m1.svg" alt="">
+      <img src="./images/sponcers/m2.svg" alt="">
+      <img src="./images/sponcers/m3.svg" alt="">
+      <img src="./images/sponcers/m4.svg" alt="">
+      <img src="./images/sponcers/m5.svg" alt="">
+      <img src="./images/sponcers/m6.svg" alt="">
+  </div>
+  </div>
+   <div class="catcont">
+    <div ><p>Economy</p></div>
+    <div class="spons">
+      <img src="./images/sponcers/e1.svg" alt="">
+      <img src="./images/sponcers/e2.svg" alt="">
+      <img src="./images/sponcers/e3.svg" alt="">
+      <img src="./images/sponcers/e4.svg" alt="">
+      <img src="./images/sponcers/e5.svg" alt="">
+      <img src="./images/sponcers/e6.svg" alt="">
+  </div>
+  </div>
+ </div>
+ <hr>
+
+
+
+
+
+
+  <div class="socials">
+    <div class="socials1">
+      <a href=""><img src="./images/sponcers/fb.svg" alt=""></a>
+      <a href=""><img src="./images/sponcers/inst.svg" alt=""></a>
+      <a href=""><img src="./images/sponcers/youtube.svg" alt=""></a>
+      <a href=""><img src="./images/sponcers/X.svg" alt=""></a>
+    </div>
+    <div class="socials2">
+        <a href="">Terms & Conditions</a>
+        <a href="">Privacy Policy</a>
+        <a href="">Cookie Prefrences</a>
+        <a href="">Legal Notice</a>
+    </div>
+  </div>
+
+</div>
+<div style="margin-top: 50px;">
 
 </div>
 
