--- a/index.html
+++ b/index.html
@@ -583,8 +583,8 @@ Pakistan
     <div class="socials1">
       <a href=""><img src="https://www.facebook.com/talhapro.stra" alt=""></a>
       <a href="https://www.instagram.com/tal_ha.o7/"><img src="./images/sponcers/inst.svg" alt=""></a>
-      <a href=""><img src="./images/sponcers/youtube.svg" alt=""></a>
-      <a href=""><img src="./images/sponcers/X.svg" alt=""></a>
+      <a href="https://www.youtube.com/@SaylaniMassITTraining"><img src="./images/sponcers/youtube.svg" alt=""></a>
+      <a href="https://x.com/"><img src="./images/sponcers/X.svg" alt=""></a>
     </div>
     <div class="socials2">
         <a href="">Terms & Conditions</a>
