--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@ Pakistan
 
   <div class="socials">
     <div class="socials1">
-      <a href=""><img src="https://www.facebook.com/talhapro.stra" alt=""></a>
+      <a href="https://www.facebook.com/talhapro.stra"><img src="./images/sponcers/fb.svg" alt=""></a>
       <a href="https://www.instagram.com/tal_ha.o7/"><img src="./images/sponcers/inst.svg" alt=""></a>
       <a href="https://www.youtube.com/@SaylaniMassITTraining"><img src="./images/sponcers/youtube.svg" alt=""></a>
       <a href="https://x.com/"><img src="./images/sponcers/X.svg" alt=""></a>
